# better-shell

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  meson.build
.github/: dependencies
.github/workflows/: CI.yml
include/: ansi.hh  arg_parser.hh  error.hh  formatter.hh  formatters.hh  print.hh  utils.hh
include/command/: built_in.hh  runner.hh
include/history/: history.hh
include/input/: cursor.hh  cursor_pos.hh  handler.hh  input.hh  terminal.hh
include/output/: handler.hh
include/parser/: error.hh  handler.hh  parser.hh  token.hh  tokenizer.hh  types.hh
src/: arg_parser.cc  error.cc  main.cc  meson.build  utils.cc
src/command/: built_in.cc  meson.build  runner.cc
src/history/: history.cc  meson.build
src/input/: cursor.cc  cursor_pos.cc  handler.cc  input.cc  meson.build  terminal.cc
src/output/: handler.cc
src/parser/: error.cc  handler.cc  meson.build  parser.cc  token.cc  tokenizer.cc  types.cc  validator.cc
src/utils/: ansi.cc  meson.build  string.cc  utils.cc
